--- a/mission/styles/mission.css
+++ b/mission/styles/mission.css
@@ -29,7 +29,7 @@ div.content {
     padding-bottom: 0.2em;
 }
 
-.logo {
+#logo {
     display: block;
     margin: auto;
     width: 150px;
@@ -52,4 +52,13 @@ ol {
 
 p, li {
     font-size: 20px
+}
+
+.dark {
+    background-color: #333;
+    color: white;
+
+    h2 {
+        color: #4F9ACF;
+    }
 }
