--- a/coolpics/styles/coolpics.css
+++ b/coolpics/styles/coolpics.css
@@ -51,7 +51,7 @@ li {
   padding:5px 15px;
 }
 
-img {
+.gallery img {
   max-width: 100%;
   height: 250px;
   width: 250px;
@@ -90,7 +90,7 @@ main {
     margin: auto;
 }
 
-button {
+button.menu-button {
   display: none;
   border: none;
   background-color: var(--primary-color);
@@ -99,11 +99,47 @@ button {
   font-size: 20px;
 }
 
+.hide {
+  display: none;
+}
+
 footer {
   background-color: var(--primary-color);
   color: var(--text-light);
   padding: 0.5rem;
   text-align: center;
+}
+
+.viewer {
+  display: none;
+  padding-top: 50px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.75);
+  display: block;
+  color: #FFF;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+}
+
+.close-viewer {
+  color: #FFF;
+  border: none;
+  background-color: transparent;
+  font-size: 2rem;
+  position: absolute;
+  right: 0;
+  margin-right: 20px;
+}
+
+.viewer-image {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+  padding-top: 50px;
 }
 
 @media screen and (max-width: 700px) {
@@ -119,5 +155,4 @@ footer {
   button {
     display: block;
   }
-  
 }
