--- a/crochet-corner/site-plan.css
+++ b/crochet-corner/site-plan.css
@@ -2,6 +2,8 @@
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
 @import url("https://fonts.googleapis.com/css?family=IM+Fell+French+Canon+SC|Lato");
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display+SC:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Wittgenstein:ital@0;1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display+SC:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Wittgenstein:ital@0;1&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
@@ -11,8 +13,8 @@ Fonts are separated by a | */
   --accent2-color: #e6a8d2;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "IM Fell French Canon SC";
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --heading-font: "Playfair Display SC", serif;
+  --paragraph-font: "Roboto", sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: var(
