--- a/crochet-corner/site-plan.css
+++ b/crochet-corner/site-plan.css
@@ -26,10 +26,10 @@ Fonts are separated by a | */
   ); /* paragraph text on a white background */
   --paragraph-color-on-color: white; /* paragraph text on a colored background */
   --paragraph-background-color: var(--primary-color);
-  --nav-link-color: var(--primary-color);
-  --nav-background-color: var(--secondary-color);
-  --nav-hover-link-color: white;
-  --nav-hover-background-color: var(--primary-color);
+  --nav-link-color: white;
+  --nav-background-color: var(--accent1-color);
+  --nav-hover-link-color: var(--accent1-color);
+  --nav-hover-background-color: var(--secondary-color);
 }
 
 /*  Look around below...but DON'T CHANGE ANYTHING! */
