styled popular patterns section

--- a/crochet-corner/styles/style2.css
+++ b/crochet-corner/styles/style2.css
@@ -31,7 +31,7 @@
 }
 
 body {
-  font-size: 18px;
+  font-size: 20px;
 }
 
 .content {
@@ -48,6 +48,10 @@ h6 {
   color: var(--headline-color-on-white);
   padding: 18px;
 } 
+
+h2 {
+  font-size: 30px;
+}
 
 p {
   font-family: var(--paragraph-font);
@@ -130,10 +134,47 @@ main {
   grid-area: 2 / 2 / 3 / 3;
   align-content: end;
   border-bottom: 2px solid var(--primary-color);
+  max-width: 90%
 }
 
 #welcome-section p {
   grid-area: 3 / 2 / 4 / 3;
+  max-width: 90%
+}
+
+#popular-patterns-section {
+  display: grid;
+  grid-template: auto / auto;
+  box-shadow: 0 0 7px #808080;
+  padding: 1em 2em 2em 2em;
+  margin: 1em;
+  text-align: center;
+}
+
+#popular-patterns-section h2 {
+  border-bottom: 2px solid var(--primary-color);
+}
+
+#home-page-pattern-output {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr; 
+  grid-template-rows: auto;
+  margin: 0.2em;
+  padding: 0.2em;
+  grid-gap: 1em;
+}
+
+.home-page-pattern-card {
+  padding: 1em;
+}
+
+.home-page-pattern-card img {
+  max-width: 100%;
+  box-shadow: 0 0 7px #808080;
+}
+
+.home-page-pattern-card h3 {
+  padding: 1em;
 }
 
 footer {
