--- a/crochet-corner/styles/style2.css
+++ b/crochet-corner/styles/style2.css
@@ -177,6 +177,41 @@ main {
   padding: 1em;
 }
 
+.help-section {
+  display: grid;
+  grid-template: 1fr 2fr, auto auto;
+  align-content: center;
+  box-shadow: 0 0 7px #808080;
+  padding: 1em 2em 1em 2em;
+  margin: 1em;
+}
+
+.help-section h2 {
+  grid-area: 1 / 1 / 2 / 2;
+}
+
+.help-section button {
+  grid-area: 2 / 1 / 3 / 2;
+  background-color: var(--primary-color);
+  border-radius: 8px;
+  border-style: none;
+  box-sizing: border-box;
+  color: var(--paragraph-color-on-color);
+  cursor: pointer;
+  font-size: 18px;
+  line-height: 20px;
+  list-style: none;
+  margin: 0;
+  outline: none;
+  padding: 1em 2em;
+  text-align: center;
+}
+
+.help-section p {
+  grid-area: 1 / 2 / 3 / 3;
+  margin: auto;
+}
+
 footer {
   background-color: var(--accent1-color);
 }
