--- a/crochet-corner/styles/style.css
+++ b/crochet-corner/styles/style.css
@@ -237,3 +237,62 @@ footer .social {
 footer .social img {
   margin-left: 5px;
 }
+
+#patterns-section {
+  display: grid;
+  grid-template: auto auto;
+  grid-gap: 1em;
+  align-content: center;
+  box-shadow: 0 0 7px #808080;
+  padding: 1em 2em 1em 2em;
+  margin: 1em;
+}
+
+#patterns-section h2 {
+  text-align: center;
+}
+
+#experience-select {
+  font-size: 20px;
+  color: var(--paragraph-color-on-color);
+  background-color: var(--paragraph-background-color);
+  padding: 1em;
+  max-width: 30%;
+  border: none;
+  cursor: pointer;
+  box-shadow: 0 0 7px #808080;
+  margin: auto;
+}
+
+#patterns-section-output {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  grid-gap: 1em;
+}
+
+.pattern-card {
+  padding: 1em;
+}
+
+.pattern-card img {
+  object-fit: cover;
+  object-position: center;
+  align-content: center;
+  justify-content: center;
+  width: 100%;
+  max-height: 250px;
+  box-shadow: 0 0 7px #808080;
+}
+
+.pattern-card h3 {
+  margin: 0 1em;
+  padding: 0.2 1em;
+  border-bottom: 2px solid var(--primary-color);
+  text-align: center;
+}
+
+.pattern-card p {
+  margin: 0 1em;
+  text-align: center;
+}
